tests/machine/x/c/right_join.error
tests/machine/x/c/right_join.c: In function ‘main’:
tests/machine/x/c/right_join.c:100:9: error: used struct type value where scalar is required
  100 |     if (entry.order) {
      |         ^~~~~
tests/machine/x/c/right_join.c:104:19: warning: format ‘%g’ expects argument of type ‘double’, but argument 2 has type ‘int’ [-Wformat=]
  104 |       printf("%.16g ", entry.order.id);
      |               ~~~~^    ~~~~~~~~~~~~~~
      |                   |               |
      |                   double          int
      |               %.16d
tests/machine/x/c/right_join.c:106:19: warning: format ‘%g’ expects argument of type ‘double’, but argument 2 has type ‘int’ [-Wformat=]
  106 |       printf("%.16g\n", entry.order.total);
      |               ~~~~^     ~~~~~~~~~~~~~~~~~
      |                   |                |
      |                   double           int
      |               %.16d
